tests/valid_input/ok07.java
class Main {
    static int a;
    static void run() {
        Main.a = 1;
        if (a > 0) {
            ifj16.print("OK\n");
        }
        return;
    }
}
