tests/invalid_syn/syn08.java
class Main {
    static void run() {
        void a;
    }
}
